--- a/coiffure_booking/requirements.txt
+++ b/coiffure_booking/requirements.txt
@@ -7,4 +7,9 @@ asgiref==3.7.2
 Django==5.0.13
 sqlparse==0.4.4
 typing_extensions==4.9.0
-gunicorn
+
+# WSGI server
+gunicorn==21.2.0
+
+# Serve static files in production
+whitenoise==6.5.0
